[tool.poetry]
name = "langgraph-coursse"
version = "0.1.0"
description = ""
authors = ["lkidane <lkidane@aimsammi.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
langgraph = "^1.2.6"
langchain-tavily = "^0.2.18"
langchain-core = "^1.4.8"
langchain-openai = "^1.3.3"
python-dotenv = "^1.2.2"
black = "^26.5.1"
isort = "^8.0.1"
langchain = "^1.3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
