[tool.poetry]
name = "lg-coursse"
version = "0.1.0"
description = ""
authors = ["lkidane <lkidane@aimsammi.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
python-dotenv = "^1.2.2"
langchain = "^1.3.11"
langgraph = "^1.2.6"
langchain-openai = "^1.3.3"
langchain-tavily = "^0.2.18"
black = "^26.5.1"
isort = "^8.0.1"
langchain-ollama = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
