[tool.poetry]
name = "lg-coursse"
version = "0.1.0"
description = ""
authors = ["lkidane <lkidane@aimsammi.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
python-dotenv = "^1.2.2"
langchain = "^1.3.11"
langgraph = "^1.2.6"
langchain-openai = "^1.3.3"
langchain-tavily = "^0.2.18"
black = "^26.5.1"
isort = "^8.0.1"
langchain-ollama = "^1.1.0"
chromadb = "^1.5.9"
yt-dlp = "^2026.6.9"
lark = "^1.3.1"
pypdf = "^6.14.2"
langchain-community = "^0.4.2"
sentence-transformers = "^5.6.0"
beautifulsoup4 = "^4.15.0"
lxml = "^6.1.1"
langchain-experimental = "^0.4.2"
panel = "^1.9.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


